# bazi-pro

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODE_WIKI.md  DESIGN_MIGRATION_GUIDE.md  Dockerfile  LICENSE  MANIFEST.in  PROMPT.md  README.md  ROADMAP.md  SKILL.md  _screenshot.py  bazi_report_example.html  check_db.py  docker-compose.yml  fix_db.py  pyproject.toml  requirements.txt  security_best_practices_report.md  start.bat  start.ps1  test_chat_context.py  test_e2e.py  test_e2e_analysis.py  test_e2e_features.py  test_paipan.py  test_webapp.py
.github/workflows/: ci.yml
.next/: trace  trace-build
.omo/: boulder.json  code-maturity-assessment.md
.omo/plans/: bazi-pro-next-iteration.md  design-optimization.md  maturity-improvement.md  ziwei-analysis.md
.omo/run-continuation/: ses_14b6d6043ffeOWn9gZiiSUTSwV.json  ses_14b9ca0e9ffe0FiF6Uw0fSvhhM.json  ses_153a72c60ffeEZ4l9irDChaHqU.json  ses_155027379ffeuV7UA26kVDf69S.json
bazi_pro/: __init__.py  archive.py  calibration.py  compare_engine.py  core_rules.py  dashboard.py  doctor.py  evidence.py  generate_report.py  hybrid_search.py  liunian_sandbox.py  narrator.py  paipan.py  plugin_api.py  retrieve_classical.py  trace.py  validation.py  view_model.py
bazi_pro/core/: __init__.py  branches.py  constants.py  disease.py  elements.py  family.py  health.py  hidden_stems.py  marriage.py  patterns.py  relations.py  shishen_utils.py  stems.py  strength.py  ten_gods.py  tiaohou.py  wealth.py  yongshen.py
bazi_pro/tui/: __init__.py  app.py
bazi_pro/ui/: __init__.py  classics_viewer.py  compare_view.py  consumer_report.py  glossary.py  pillar_chart.py  reasoning_graph.py  replay.py  report.py  report_composer.py  sandbox_ui.py  text_cleaner.py  timeline_river.py  verdict_seal.py
benchmarks/: __init__.py  analyze_by_category.py  cli.py  config.py  download.py
benchmarks/calibrator/: __init__.py  analyzer.py  baseline.py  case_converter.py  prompt_optimizer.py
benchmarks/optimizers/: __init__.py  exam_prompts.py  self_consistency.py
benchmarks/runners/: baziqa_runner.py  ziwei_runner.py
benchmarks/scoring/: extractor.py  stats.py
docs/: ARITHMETIC_SPEC.md  CENTRALIZATION_RISKS.md  GLOSSARY.md  MONITORING.md
examples/: sample_analysis.md  sample_bazi_mcp.json  sample_consumer_report.html  sample_dashboard.html  sample_report.md  sample_trace.json
frontend/: .npmrc  Dockerfile  deploy.sh  index.html  next.config.ts  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/_design-demos/: 01-homepage.html  02-results.html  03-overview.html  brand-spec.md
frontend/e2e/: analyze.spec.ts  home.spec.ts
frontend/src/: App.tsx  html2pdf.d.ts  index.css
mcp-server/: README.md  server.py
plugins/: __init__.py  loader.py
references/: ETHICS.md  bazi-mcp-direct-call.md  case-study-false-positive-yangren.md  classical_corpus.md  cross-platform-font-setup.md  migration-checklist.md  report-style-example.md  tiaohou.md  v4.3-hard-reset.md  v4.3-master-brief.md  v4.3-visual-system-rewrite.md
scripts/: __init__.py  audit_all.py  audit_data_tables.py  audit_golden_cases.py  audit_logic_chain.py  audit_skill_consistency.py  check_db.py  check_version_consistency.py  create_classical_tests.py  dashboard.py  doctor.py  evidence.py  extract_corpus_cases.py  find_claude.sh  fix_db.py  generate_report.py  hybrid_search.py  push_to_github.py  ralph_dev_loop.sh  ralph_loop.py  retrieve_classical.py  run_mutation_test.py  update_golden.py  update_golden_cases.py  validate_pattern_rules.py
server/: .env  __init__.py  analysis.py  app.py  cache.py  chart_quality.py  chat_service.py  cross_validate.py  daily_fortune.py  database.py  dayun_score.py  db.py  deps.py  gongwei.py  interpretation_modes.py  kline_ohlc.py  knowledge_graph.py  llm.py  llm_client.py  llm_context.py  llm_prompts.py  mcp_adapter.py  metrics.py  models.py  nayin.py  personality.py  rag_engine.py  ratelimiter.py  report_pdf.py  reverse_lookup.py  schemas.py  shensha.py  sse.py  taskstore.py  true_solar_time.py  ws.py  ziwei.py
server/agents/: __init__.py  bazi_agent.py  orchestrator.py  synthesis_agent.py  tools.py  ziwei_agent.py
server/auth/: jwt_handler.py  routes.py
server/billing/: alipay.py  models.py  quota.py  routes.py  wechat_pay.py
server/migrations/: 001_initial.sql
server/routes/: v1_legacy.py  v2_analysis.py  v2_chat.py  v2_fortune.py  v2_settings.py  v2_tools.py  v2_ziwei.py
server/tools/: package-lock.json  package.json
test-screenshots/: test_paipan.py
tests/: run_golden.py  test_analysis_golden.py  test_auth_coverage.py  test_auth_frontend_contract.py  test_bazi_coverage.py  test_chat_service.py  test_console_scripts.py  test_consumer_report.py  test_core.py  test_dayun_extraction.py  test_db.py  test_dimensions.py  test_evidence_cases.py  test_full_analysis.py  test_fuzz_arithmetic.py  test_hardening_p0.py  test_html_quality.py  test_llm.py  test_llm_context.py  test_llm_prompts.py  test_llm_retry.py  test_llm_tools.py  test_property.py  test_ratelimiter.py  test_retrieve.py  test_retrieve_cache_dir.py  test_schools.py  test_server.py  test_server_coverage.py  test_server_deep.py  test_server_entrypoint.py  test_server_modules.py  test_server_validation.py  test_ssrf_protection.py  test_tools.py  test_trace.py  test_validation.py  test_vm_extraction.py  test_ziwei.py  validate_output_schema.py
tests/evidence_cases/: case_01_standard_complete.json  case_02_no_classical_refs.json  case_03_no_dayun_summary.json  case_04_extreme_strong.json  case_05_extreme_weak.json  case_06_special_pattern.json  case_07_minimal_input.json  case_08_high_pattern_score.json  case_09_low_pattern_score.json  case_10_multiple_key_features.json
tests/golden/: analysis_cases.yaml
tests/golden_cases/: all_same_wuxing.json  caiwang_shenruo.json  canggan_quanzhong.json  chong_he_xing_hai_bingjian.json  chouwei_chong.json  classical_caiwang_shenruo.json  classical_cong_cai_juhui.json  classical_congqiang_wuwu.json  classical_guan_yin_shuangquan.json  classical_quzhi.json  (+110 more)
(+146 files in other folders)
