[project]
name = "bazi-pro"
version = "5.0.0"
description = "专业八字命理分析引擎 — BM25+jieba 古籍检索 · 动态SVG命盘 · 命运河流时间轴 · 推理图谱 · Web服务 · 插件机制"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Minervaowl7" }
]
keywords = ["bazi", "chinese-metaphysics", "fortune-telling", "classical-chinese", "nlp", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "jieba>=0.42.1",
]

[project.optional-dependencies]
hybrid = ["sentence-transformers>=2.2", "faiss-cpu>=1.7", "numpy>=1.24"]
report = ["markdown>=3.5"]
pdf = ["weasyprint>=60"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.20", "redis>=4.5", "websockets>=11.0", "jinja2>=3.1", "pydantic>=2,<3", "asyncpg>=0.29", "sqlalchemy[asyncio]>=2.0", "PyJWT>=2.8", "bcrypt>=4.0", "httpx>=0.24", "email-validator>=2.0", "cryptography>=41.0"]
tui = ["rich>=13.0"]
all = ["bazi-pro[hybrid,report,pdf,server,tui]"]

[project.scripts]
bazi-retrieve = "bazi_pro.retrieve_classical:main"
bazi-report = "bazi_pro.generate_report:main"
bazi-doctor = "bazi_pro.doctor:main"
bazi-evidence = "bazi_pro.evidence:main"
bazi-trace = "bazi_pro.trace:main"
bazi-server = "server.app:main"
bazi-tui = "bazi_pro.tui.app:main"
bazi-hybrid = "bazi_pro.hybrid_search:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bazi_pro*", "server*", "plugins*"]

[tool.setuptools.package-data]
"bazi_pro.data" = ["*.md"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E701"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
